packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Turn__c/Conversation_Turn__c.object-meta.xml
<CustomObject>
    <label>Conversation Turn</label>
    <pluralLabel>Conversation Turns</pluralLabel>
    <nameField>
        <label>Turn Number</label>
        <displayFormat>CT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Speaker and message-level transcript row within a conversation.</description>
</CustomObject>