packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Turn__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <type>MasterDetail</type>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Conversation Turns</relationshipLabel>
    <relationshipName>Conversation_Turns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>