packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Turn__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <type>Text</type>
    <length>255</length>
</CustomField>