packages/pulse-conversations-core/force-app/main/default/objects/Conversation_Turn__c/fields/Turn_Index__c.field-meta.xml
<CustomField>
    <fullName>Turn_Index__c</fullName>
    <label>Turn Index</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>